--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="iso8.css">
+	<link rel="stylesheet" href="style.css">
 	<title>iso8 Calculator</title>
 </head>
 <body>
@@ -17,6 +17,6 @@
 		</div>
 		<h2 id="calcResult"></h2>
 	</main>	
-	<script src="iso8.js"></script>
+	<script src="main.js"></script>
 </body>
 </html>
