cleaned up some code. still cant fix the reload issue

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -10,13 +11,11 @@
 	<main>
 		<div class="input-container"></div>	
 			<h1>What level iso are you trying to find?</h1>
-			<form action="input">
 			<input type="text" name="" id="iso-input" placeholder="enter iso8 level">
-			<h2 id="btn">Calculate</h2>
-			</form>
+			<button id="btn" type="button" name="button">Calculate</button>
 		</div>
 		<h2 id="calcResult"></h2>
 	</main>	
-	<script src="main.js"></script>
+	<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
