added some notes for those taking a look

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<main>
 		<div class="input-container crystal-container">
-			<input type="text" name="" class="hidden" id="health" placeholder="enter health iso8 level">
+			<input type="text" name="" class="hidden" id="health" placeholder="enter health iso8 level"> <!-- not yet in use-->
 			<input type="text" name="" class="hidden" id="armor" placeholder="enter armor iso8 level">
 			<input type="text" name="" class="hidden" id="focus" placeholder="enter focus iso8 level">
 			<input type="text" name="" class="hidden" id="damage" placeholder="enter damage iso8 level">
