--- a/index.html
+++ b/index.html
@@ -20,11 +20,18 @@
 			<h1>What level iso are you trying to find?</h1>
 			<input type="text" name="" id="iso-input" placeholder="enter iso8 level">
 			<div class="btn-container">
-				<button class="btn" id="btn2" type="button" name="button">Press first</button>
 				<button class="btn" id="btn" type="button" name="button">Calculate</button>
 			</div>
 		</div>
 		<h2 id="calcResult"></h2>
+		<div class="input-container2">	
+			<h1>What level crystal are you trying to find?</h1>
+			<input type="text" name="" id="crystal-input" placeholder="enter # crystal level">
+			<div class="btn-container2">
+				<button class="btn2" id="btn2" type="button" name="button">Calculate</button>
+			</div>
+		</div>
+		<h2 id="calcResult2"></h2>
 	</main>	
 	<script type="text/javascript" src="main.js"></script>
 </body>
