add clarity in inputs

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</div>
 		<div class="input-container">	
 			<h1>What level iso are you trying to find?</h1>
-			<input type="text" name="" id="iso-input" placeholder="enter iso8 level">
+			<input type="text" name="" id="iso-input" placeholder="enter # iso8 level">
 			<div class="btn-container">
 				<button class="btn" id="btn" type="button" name="button">Calculate</button>
 			</div>
