--- a/index.html
+++ b/index.html
@@ -10,29 +10,42 @@
 <body>
 	<main>
 		<div class="input-container crystal-container">
-			<input type="text" name="" class="hidden" id="health" placeholder="enter health iso8 level"> <!-- not yet in use-->
-			<input type="text" name="" class="hidden" id="armor" placeholder="enter armor iso8 level">
-			<input type="text" name="" class="hidden" id="focus" placeholder="enter focus iso8 level">
-			<input type="text" name="" class="hidden" id="damage" placeholder="enter damage iso8 level">
-			<input type="text" name="" class="hidden" id="resist" placeholder="enter resist iso8 level">
+			<h1>What level are your iso crystals?</h1>
+			
+			<div class="isoInput">
+				<label>Health:</label>
+				<input type="text" name="" class="hidden" id="health" placeholder="enter health iso8 level"> <!-- not yet in use-->
+			</div>
+			<div class="isoInput">
+				<label>Armor:</label>
+				<input type="text" name="" class="hidden" id="armor" placeholder="enter armor iso8 level">
+			</div>
+			<div class="isoInput">
+				<label>Focus:</label>
+				<input type="text" name="" class="hidden" id="focus" placeholder="enter focus iso8 level">
+			</div>
+			<div class="isoInput">
+				<label>Damage:</label>
+				<input type="text" name="" class="hidden" id="damage" placeholder="enter damage iso8 level">
+			</div>
+			<div class="isoInput">
+				<label>Resist:</label>
+				<input type="text" name="" class="hidden" id="resist" placeholder="enter resist iso8 level">
+			</div>
 		</div>
 		<div class="input-container">	
-			<h1>What level iso are you trying to find?</h1>
-			<input type="text" name="" id="iso-input" placeholder="enter # iso8 level">
+			
 			<div class="btn-container">
 				<button class="btn" id="btn" type="button" name="button">Calculate</button>
 			</div>
 		</div>
-		<h2 id="calcResult"></h2>
-		<div class="input-container2">	
-			<h1>What level crystal are you trying to find?</h1>
-			<input type="text" name="" id="crystal-input" placeholder="enter # crystal level">
-			<div class="btn-container2">
-				<button class="btn2" id="btn2" type="button" name="button">Calculate</button>
-			</div>
-		</div>
-		<h2 id="calcResult2"></h2>
+		<h2 id="healthResult"></h2>
+    		<h2 id="armorResult"></h2>
+		<h2 id="focusResult"></h2>
+    		<h2 id="damageResult"></h2>
+    		<h2 id="resistResult"></h2>
+		<h2 id="totalIons"></h2>
 	</main>	
-	<script type="text/javascript" src="main.js"></script>
+	<script type="text/javascript" src="calc2.js"></script>
 </body>
 </html>
