added some styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<title>iso8 Calculator</title>
 </head>
 <body>
+	<div class="img-banner">
+		<!-- <img src="marvelbackground.jpeg" alt="black order banner"> -->
+	</div>
 	<main>
 		<div class="input-container crystal-container">
 			<h1>What level are your iso crystals?</h1>
